# VOLLEYBALL-LIVE-SCORER

./: .gitignore  .vercelignore  app.py  pyproject.toml  requirements.txt  schema.sql
static/css/: style.css
static/js/: main.js
templates/: about.html  admin_scoring.html  base.html  create_matches.html  create_team.html  create_tournament.html  index.html  login.html  register.html  toss.html
